z-index and layout fixes for interstitial

--- a/src/global.scss
+++ b/src/global.scss
@@ -28,8 +28,27 @@ body {
 }
 
 #edtechconsent {
-  position: sticky;
+  position: fixed;
+  z-index: 0;
   top: 10dvh;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+main {
+  position: relative;
+  z-index: 1;
+}
+
+[data-component='NewsFooter'],
+main ~ main:last-of-type:not([class]) {
+  position: relative;
+  z-index: 3;
+}
+
+.FormatCredit {
+  position: relative;
+  z-index: 4;
 }
 
 .Main > [data-key='panel'] {
@@ -42,7 +61,6 @@ body {
   border-radius: var(--sl-border-radius);
   box-shadow: none;
   max-width: calc(100dvw - 20px);
-  margin-block-end: inherit;
   color: var(--sl-text-primary);
   color-scheme: light;
 }
@@ -60,6 +78,10 @@ body {
 
 .Main > [data-key='interstitial'] {
   height: 80dvh;
+}
+
+.Main > [data-key='interstitial']:first-of-type {
+  height: 0;
 }
 
 .Main .ImageEmbed .Picture {
@@ -135,21 +157,3 @@ figure[data-uri="coremedia://image/104946302"]
   font-style: normal;
   color: #fff;
 }
-
-// #content .Block-media .Picture,
-// #content .Block-media.is-fixed .Picture {
-//   --image-inset: 10px;
-//   width: calc(100dvw - 2 * var(--image-inset));
-//   height: calc(100dvh - 2 * var(--image-inset));
-//   left: var(--image-inset);
-//   top: var(--image-inset);
-//   overflow: hidden;
-//   border-radius: var(--sl-border-radius);
-// }
-
-// @media screen and (min-width: 750px) {
-//   #content .Block-media .Picture,
-//   #content .Block-media.is-fixed .Picture {
-//     --image-inset: 40px;
-//   }
-// }
